[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# - web framework
actix-broker = "0.4"
actix-codec = "0.5"
actix-cors = "0.6"
actix-files = "0.6"
actix-http = "3"
actix-identity = "0.5"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
actix-protobuf = "0.9"
actix-session = "0.7"
actix-test = "0.1"
actix-tls = "3"
actix-utils = "3"
actix-web = "4.3"
actix-web-actors = "4.1"
actix-web-lab = "0.19"
actix-ws = "0.2.5"